# voice-record-translate

./: .gitignore  Makefile  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.zh.md  demo_split.py  pyproject.toml
.github/workflows/: release.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  LocaleContext.tsx  i18n.ts  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AddFilesModal.tsx  AudioPlayer.tsx  SessionItem.tsx  SessionList.tsx  SpeakerEditPopup.tsx  TranscriptPanel.tsx  WalkthroughOverlay.tsx
frontend/src/constants/: speakerColors.ts
frontend/src/pages/: MainPage.tsx  OnboardingPage.tsx  SettingsPage.tsx  ViewerPage.tsx
frontend/src/types/: config.ts  session.ts
src/vrt/: checkpoint.py  config.py  main.py  pipeline.py  server.py  session.py  srt.py  transcribe.py  translate.py
src/vrt/static/: index.html
src/vrt/static/assets/: index-0X_BJLxI.js  index-3pzee9hM.css  index-B586aq9a.css  index-B5TQ9meV.js  index-B6lhyh2P.js  index-B8q4oB5R.js  index-BDkJweHS.js  index-BYm7fP_C.css  index-BcXDeujT.js  index-BiIMOiD5.css  index-BjmhU0T1.js  index-BxtTIVP8.js  index-CFDg2GNV.js  index-CL_vUjlQ.js  index-CUdKUV6M.css  index-C_hIVyTR.js  index-C_nNZuFE.css  index-CaWmtB0E.js  index-CbWaYGqf.js  index-ChRhnEgD.js  index-CnqCv4kQ.css  index-D02Y7d6L.js  index-D6tPGYry.js  (+13 more)
src/vrt/ui/: main_window.py  settings_dialog.py
tests/: test_checkpoint.py  test_config.py  test_server.py  test_session.py  test_srt.py  test_transcribe.py  test_translate.py
