[project]
name = "voice-record-translate"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "openai>=1.0",
]

[project.scripts]
vrt = "vrt.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
